--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "domready": "^1.0.8",
     "formsy-react": "0.17.0",
     "formsy-react-components": "0.6.6",
+    "load-script": "^1.0.0",
     "lodash": "3.10.1",
     "mantra-core": "^1.2.0",
     "material-ui": "^0.15.0-alpha.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-helmet": "^2.3.1",
+    "react-komposer": "^1.7.1",
     "react-mixin": "^2.0.2",
     "react-mounter": "^1.0.0",
     "react-select": "1.0.0-beta8",
