--- a/package.json
+++ b/package.json
@@ -35,15 +35,18 @@
     "lodash": "3.10.1",
     "mantra-core": "^1.2.0",
     "material-ui": "^0.15.0-alpha.2",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
+    "react": "^15.0.1",
+    "react-addons-create-fragment": "^15.0.1",
+    "react-addons-pure-render-mixin": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-helmet": "^2.3.1",
     "react-komposer": "^1.7.1",
     "react-mixin": "^2.0.2",
     "react-mounter": "^1.0.0",
-    "react-select": "1.0.0-beta8",
+    "react-select": "^1.0.0-beta12",
     "react-svg-use": "^1.0.1",
     "react-tagsinput": "3.1.0",
+    "react-tap-event-plugin": "^1.0.0",
     "tcomb-form": "0.8.1"
   },
   "private": true
