react,material-ui,formsy updated and many more changes on the project

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babyin",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "scripts": {
     "lint": "eslint ./lib ./client ./server --ext .js --ext .jsx",
     "lintfix": "npm run lint -- --fix",
@@ -18,23 +18,24 @@
     "babel-preset-stage-2": "6.x.x",
     "babel-root-slash-import": "1.x.x",
     "chai": "3.x.x",
-    "enzyme": "^2.0.0",
+    "enzyme": "^2.2.0",
     "eslint": "1.10.x",
     "eslint-plugin-react": "3.15.x",
     "jsdom": "^8.0.4",
     "mocha": "2.x.x",
-    "react-addons-test-utils": "^0.14.6",
+    "react-addons-test-utils": "^15.0.1",
     "sinon": "1.17.x"
   },
   "dependencies": {
     "classnames": "2.2.1",
     "domready": "^1.0.8",
-    "formsy-react": "0.17.0",
-    "formsy-react-components": "0.6.6",
+    "formsy-material-ui": "^0.4.0",
+    "formsy-react": "^0.18.0",
+    "formsy-react-components": "^0.7.1",
     "load-script": "^1.0.0",
-    "lodash": "3.10.1",
-    "mantra-core": "^1.2.0",
-    "material-ui": "^0.15.0-alpha.2",
+    "lodash": "^4.11.1",
+    "mantra-core": "^1.5.0",
+    "material-ui": "^0.15.0-beta.1",
     "react": "^15.0.1",
     "react-addons-create-fragment": "^15.0.1",
     "react-addons-pure-render-mixin": "^15.0.1",
@@ -42,10 +43,10 @@
     "react-helmet": "^2.3.1",
     "react-komposer": "^1.7.1",
     "react-mixin": "^2.0.2",
-    "react-mounter": "^1.0.0",
+    "react-mounter": "^1.2.0",
     "react-select": "^1.0.0-beta12",
     "react-svg-use": "^1.0.1",
-    "react-tagsinput": "3.1.0",
+    "react-tagsinput": "^3.5.1",
     "react-tap-event-plugin": "^1.0.0",
     "tcomb-form": "0.8.1"
   },
